--- a/src/app/main/message/awaitingReply/awaiting.html
+++ b/src/app/main/message/awaitingReply/awaiting.html
@@ -118,6 +118,7 @@
 
                         </div>
                         <hr>
+                        <mailbox mail="item.communication.sent"></mailbox>
 
                         <!--<span ng-repeat="obj in item.communication.sent">-->
                         <!--<div class="row" >-->
