--- a/src/app/main/message/sent/sent.html
+++ b/src/app/main/message/sent/sent.html
@@ -112,29 +112,30 @@
 
                         </div>
                         <hr>
+                        <mailbox mail="item.communication.sent"></mailbox>
 
-                        <!--<span ng-repeat="obj in item.communication.sent">
-                        <div class="row" >
-                            <div class="col-md-12 notification-style uppercase">REQUEST SENT</div>
+                        <!--<span ng-repeat="obj in item.communication.sent">-->
+                        <!--<div class="row" >-->
+                            <!--<div class="col-md-12 notification-style uppercase">REQUEST SENT</div>-->
 
-                            <div class="col-md-12 notification-details">{{obj.content}}</div>
+                            <!--<div class="col-md-12 notification-details">{{obj.content}}</div>-->
 
-                        </div>
-                                                        <hr>
+                        <!--</div>-->
+                                                        <!--<hr>-->
 
-                            </span>-->
-                        <div class="row margin-top-10">
-                            <div class="col-md-12">
-                                <button type="button" class=" uppercase btn red input-rounded" ng-click="">
-                                    Call Now
-                                </button>
-                                &nbsp;
-                                <button disabled="item.user.interest == 'sent'" type="button" class=" uppercase btn btn-default input-rounded" ng-click="">
-                                    Send Interest
-                                </button>
+                            <!--</span>-->
+                        <!--<div class="row margin-top-10">-->
+                            <!--<div class="col-md-12">-->
+                                <!--<button type="button" class=" uppercase btn red input-rounded" ng-click="">-->
+                                    <!--Call Now-->
+                                <!--</button>-->
+                                <!--&nbsp;-->
+                                <!--<button disabled="item.user.interest == 'sent'" type="button" class=" uppercase btn btn-default input-rounded" ng-click="">-->
+                                    <!--Send Interest-->
+                                <!--</button>-->
 
-                            </div>
-                        </div>
+                            <!--</div>-->
+                        <!--</div>-->
                     </div>
 
                     <div class="row">
