--- a/src/app/footer/footer.html
+++ b/src/app/footer/footer.html
@@ -16,18 +16,8 @@
                             </div>
                             <div class="col-md-11 ">
                                 <p class="text-left description">
-                                    Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio
-                                    sem
-                                    nec elit. Cras mattis consectetur purus sit amet fermentum. Duis mollis, est non
-                                    commodo
-                                    luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis
-                                    consectetur purus sit amet fermentum. Duis mollis, est non commodo luctus, nisi erat
-                                    porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit
-                                    amet
-                                    fermentum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget
-                                    lacinia
-                                    odio sem nec elit. Cras mattis consectetur purus sit amet fermentum.
-                                </p>
+                                    People Matrimony is a paramount matrimony which provides value to tradition and security. As we are living in a digital world, People matrimony has facilitated the digital natives with a digital technology where you can express and connect with others anywhere in the social world.The main focus are men and women who are looking for a perfect match. On the security front, People matrimony provides security by not revealing the contact information, preventing unnecessary communication and maintaining privacy.</p>
+                                <p class="text-left description">People matrimony has been serving for the past ten years and is dedicated to promote the sacredness of marriage, and encouraging couples to build stronger relationships.</p>
                             </div>
                         </div>
                     </div>
