--- a/src/app/main/message/inbox/accepted/messageAccepted.html
+++ b/src/app/main/message/inbox/accepted/messageAccepted.html
@@ -112,7 +112,11 @@
                                 </div>
 
                             <div class="col-md-12 notification-details">{{item.response}}</div>
+                        <div class="col-md-12 margin-top-10">
+                            <mailbox mail="item.communication.sent" res="type"></mailbox>
                         </div>
+                        </div>
+
                         <!--<div class="row margin-top-10">
                             <div class="col-md-12">
                                 <button type="button" class=" uppercase btn red input-rounded" ng-click="">
