--- a/src/app/main/message/inbox/pending/messagePending.html
+++ b/src/app/main/message/inbox/pending/messagePending.html
@@ -121,6 +121,10 @@
 								</button>
 
 							</div>
+							<div class="col-md-12 margin-top-10">
+							<mailbox mail="item.communication.sent" res="type"></mailbox>
+								</div>
+
 
 						</div>
 <!--
