--- a/src/app/main/searchresults/searchresults.html
+++ b/src/app/main/searchresults/searchresults.html
@@ -74,7 +74,8 @@
                         <div class="portlet-body form">
                             <div class="row">
                                 <div class="col-md-4" style="padding:15px;text-align: center;">
-                                    <imageinfo images="item.images" gender="item.gender" reverse="viewAll(data)"></imageinfo>
+                                    <imageinfo images="item.images" gender="item.gender" reverse="viewAll(data)" reqstatus="item.photo_requested"
+                                            reqdetails="item.photo_req" id="item.id_people" reverse2="requests(data)"></imageinfo>
 
                                 </div>
                                 <div class="col-md-8">
