--- a/src/app/directive/image-scroll/image-scroll.html
+++ b/src/app/directive/image-scroll/image-scroll.html
@@ -7,13 +7,13 @@
     width: 180px"
          ng-show="indexValue == $index" ng-click='reverse1()'
             />
-    <div ng-if="!showPhotosreq">
-        <button style="height: 40px;width:180px;background-color: #3d84cc;color: white;font-size: 14px;font-weight: bold" ng-click="request()">Photo Request&nbsp;&nbsp;&nbsp;&nbsp;<img src="/assets/icons/next.png" >                               </a>
-        </button>
-    </div>
-    <div ng-if="showPhotosreq">
-        <span style="color:grey;" >Photo already Requested</span>
-    </div>
+    <!--<div ng-if="!showPhotosreq">-->
+        <!--<button style="height: 40px;width:180px;background-color: #3d84cc;color: white;font-size: 14px;font-weight: bold" ng-click="request()">Photo Request&nbsp;&nbsp;&nbsp;&nbsp;<img src="/assets/icons/next.png" >                               </a>-->
+        <!--</button>-->
+    <!--</div>-->
+    <!--<div ng-if="showPhotosreq">-->
+        <!--<span style="color:grey;" >Photo already Requested</span>-->
+    <!--</div>-->
 
 </div>
 <div class="col-md-12" style="text-align: center;margin-top:20px" ng-if="size > 1">
