--- a/src/app/main/profile/editProfile/profile.html
+++ b/src/app/main/profile/editProfile/profile.html
@@ -541,7 +541,7 @@
                                     <select class="form-control input-rounded "
                                             ng-model="profile.login_user.marital_status">
                                         <option value="">Select</option>
-                                        <option value="unmarried">Never Married</option>
+                                        <option value="never married">Never Married</option>
                                         <option value="widow">Widowed</option>
                                         <option value="divorced">Divorced</option>
                                         <option value="awaitingdivorce">Awaiting divorce</option>
