--- a/src/app/main/message/sent/sent.html
+++ b/src/app/main/message/sent/sent.html
@@ -112,7 +112,7 @@
 
                         </div>
                         <hr>
-                        <mailbox mail="item.communication.sent" res="type"></mailbox>
+                        <mailbox mail="item.communication" res="type"></mailbox>
 
                         <!--<span ng-repeat="obj in item.communication.sent">-->
                         <!--<div class="row" >-->
