--- a/src/app/main/profile/editProfile/profile.html
+++ b/src/app/main/profile/editProfile/profile.html
@@ -2276,7 +2276,8 @@
                                                                                     ng-model="setPartnerReligion.religion"
                                                                                     options="religonList"
                                                                                     id-prop="id_religion"
-                                                                                    display-prop="religion">
+                                                                                    display-prop="religion"
+                                                                               ng-change="selectRegliousPreference()">
                                                                        </multiselect>
 
 
