--- a/src/app/main/view-profile/viewProfile.html
+++ b/src/app/main/view-profile/viewProfile.html
@@ -562,8 +562,8 @@
 
                                         <div class="col-md-4" style="height:60px">
                                             <label class=" font-weight-head  "> Ancestral Origin</label>
-                                            <p class="details " ng-if="view.ancestral_origin != null &&  view.ancestral_origin != ''">{{view.ancestral_origin}}</p>
-                                            <p class="details " ng-if="view.ancestral_origin == null ||  view.ancestral_origin == ''">
+                                            <p class="details " ng-if="view.ancestral_origin_text != null &&  view.ancestral_origin_text != ''">{{view.ancestral_origin}}</p>
+                                            <p class="details " ng-if="view.ancestral_origin_text == null ||  view.ancestral_origin_text == ''">
                                             <span class="details " ng-if="!originReq"><a
                                                     style="color: indianred;font-weight: bold"
                                                     ng-click="requests('origin','familyRequest')">Send Request</a></span>
