--- a/src/app/main/message/inbox/accepted/messageAccepted.html
+++ b/src/app/main/message/inbox/accepted/messageAccepted.html
@@ -110,13 +110,46 @@
                                     <!--<span ng-if="item.action == 'contact'">CONTACT VIEWED</span>-->
                                     <!--<span ng-if="item.action == 'field'">{{item.field_name}} Request Accepted</span>-->
                                 <!--</div>-->
+                            <div class="col-md-12 notification-style uppercase">
+                                <span ng-if="item.action == 'connect'">INTEREST ACCEPTED
+                                    </span>
+								<span ng-if="item.action == 'field'">
+									<span ng-if="item.field_name == 'photo_request'">Photo Request ACCEPTED </span>
+									<span ng-if="item.field_name == 'smoking'">Add Smoking Request ACCEPTED </span>
+									<span ng-if="item.field_name == 'drinking'">Add Drinking Request ACCEPTED </span>
+									<span ng-if="item.field_name == 'income'">Add Income Request ACCEPTED </span>
+									<span ng-if="item.field_name == 'education'">Add Education Request ACCEPTED </span>
+									<span ng-if="item.field_name == 'family'">Add Family Request Declined </span>
+									<span ng-if="item.field_name == 'family_status'">Add Family Status Request ACCEPTED </span>
+									<span ng-if="item.field_name == 'origin'">Add Origin Request ACCEPTED </span>
+									<span ng-if="item.field_name == 'about_family'">Add About Family Request ACCEPTED </span>
 
-                            <div class="col-md-12 notification-details"><i class="fa fa-send" style="color: green"></i> {{item.content}}</div>
-                            <div class="col-md-12 notification-details"><i class="fa fa-reply" style="color: red"></i> {{item.response}}</div>
+
+								</span>
+                                <span ng-if="item.msg_status == 'sent'"><img src="/assets/icons/sent.png" ></span>
+                                <span ng-if="item.msg_status == 'recieved'"><img src="/assets/icons/receive.png" ></span>
+                            </div>
+
+                            <!--<div class="col-md-12 notification-details"><i class="fa fa-send" style="color: green"></i> {{item.content}}</div>-->
+                            <div class="col-md-12 notification-details"> {{item.response}}</div>
+                            <div class="col-md-12 margin-top-10">
+                                <button ng-if="item.action != 'connect'" type="button" class=" uppercase btn red input-rounded" ng-click="sendInterest(item.user.id_people)">
+                                   Send Interest
+                                </button>
+                                &nbsp;
+                                <button  type="button" ng-click="respondAction(item.com_id,'declined')" class=" uppercase btn btn-default input-rounded" ng-click="">
+                                    Send Mail
+                                </button>
+                                &nbsp;
+                                <button  type="button" ng-click="respondAction(item.com_id,'declined')" class=" uppercase btn btn-default input-rounded" ng-click="">
+                                    Call now
+                                </button>
+
+                            </div>
                         <div class="col-md-12 margin-top-10">
                             <hr/>
 
-                            <mailbox mail="item.communication.sent" res="type"></mailbox>
+                            <mailbox mail="item.communication" res="type"></mailbox>
                         </div>
                         </div>
 
